--- a/accounts/templates/accounts/landing.html
+++ b/accounts/templates/accounts/landing.html
@@ -10,7 +10,7 @@
     <p>Your personalized travel assistant for packing, planning, and weather insights.</p>
     <div class="button-group">
         <a href="{% url 'accounts.signup' %}" class="btn">Sign Up</a>
-        <a href="{% url 'accounts.login' %}" class="btn btn-outline">Log In</a>
+        <a href="{% url 'accounts.login' %}" class="btn">Log In</a>
     </div>
 </div>
 
