--- a/travelmate/templates/base.html
+++ b/travelmate/templates/base.html
@@ -71,6 +71,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'trips.index' %}">My Trips</a>
                 <a href="{% url 'trips.planner' %}">Trip Planner</a>
+                <a href="{% url 'password_change' %}">Change Password</a>
                 <a href="{% url 'accounts.logout' %}">Logout ({{ user.username }})</a>
             {% endif %}
         </div>
