--- a/accounts/templates/accounts/password_change_done.html
+++ b/accounts/templates/accounts/password_change_done.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Password Updated</h2>
-<p>Your password has been successfully changed.</p>
-<a href="{% url 'trips.index' %}">Return to Trips</a>
+<div class="container pt-4 text-center">
+  <h2 class="fw-bold mb-3">Password Updated Successfully</h2>
+  <p class="text-muted mb-4">Your password has been changed. You can continue using TravelMate.</p>
+
+  <a href="{% url 'trips.index' %}" class="btn btn-outline-primary fw-bold">
+    Return to My Trips
+  </a>
+</div>
 {% endblock %}
